app/assets/stylesheets/website/organisations.scss
@import "../shared/utils/type_stacks";
@import "../shared/utils/type_sizing";
@import "../shared/utils/clearfix";
@import "organisation_brands";

#wrapper {
  .organisation {
    nav.sub_navigation,
    #about_us {
      @media only screen and (min-width:670px) {

      }
      @media only screen and (min-width:764px) {
        margin-left: 0;
        margin-right: 9%;
      }
    }
  }
}

#content {
  @include branded_page_headers;

  #organisation_disclaimer {
    background-color: #F17921;
    height: 1.5em;

    h1, p {
      display: inline;
    }
    
    h1 {
      @include type-16;
      margin-left: 1.5%;
    }
    
    p {
      @include type-14;
      margin-left: 0.5em;
    }
  }
  
  .organisation {
    section.page_header {
      margin-top: 0.75em;
    }
    h1.page_title.name {
      font-family: $helvetica;
      margin-bottom: 0.375em;
    }
  }

  .organisation, .country {
    h2.category {
      @include type-16;
      display: inline;
      margin-right: 0.5em;
      margin-bottom: 0;
    }

    section.article_section {
    }
  }

  nav.sub_navigation {
    
    ul {

      li {
        border-bottom: dotted 1px #000;
        margin-bottom: 0.375em;
        margin-top: -1px;
        padding-bottom: 0.375em;

        &:last-child {
          border-bottom: none;
        }
        
        a {
          font-weight: bold;
        }
      }
    }
  }
  #about_us {

    .category {
      text-transform: lowercase;
    }
  }


  .g2 section.org_news {
/*    padding-top: 1.5em;*/

    h1 {
      margin: 0;
      margin-left: 0;
      position: absolute;
      z-index: 10;
    }

    section.featured_carousel {
      margin-bottom: 1em;

      h2 {
/*        background-color: ; DEPT COLOUR */
      }
      .summary {
/*        background-color: ; DEPT COLOUR */
      }
      div.meta {
/*        background-color: ; DEPT COLOUR */
      }

    }

    p.readmore {
    }
  }

  #who {
    
    section {
      margin-bottom: 1.5em;
    }

    article {
      @include clearfix;
      position: relative;
      margin-bottom: 0.75em;
      
      .current_appointee {
        @include type-16;
        font-weight: bold;
      }
      
      .role {
        @include type-14;
        font-family: $helvetica;
      }
      
      .current_appointee, .role {
        margin-bottom: 0;
        margin-left: 96px;
      }

      img {
        float: left;
        width: 70px;
      }
    }
    
    .view_all {
      @include type-14;
    }
  }

  .map_canvas {
    width: 300px;
    height: 300px;
    border: 1px solid #000;
  }

  ul.policy_topics {
    li {
      display: inline;
        a {
          @include type-14;
          background: #eee;
          display: block;
          float: left;
          
/*          line-height: 1.286em;*/
          
          padding: 0.3215em 0.643em;
          margin: 0.3215em 0.643em 0.3215em 0;
        }
    }
  }

  .contact_page {

    .organisation_contact {
      margin-bottom: 1.5em;
      h3 {
        @include type-18;
        margin-bottom: 0.25em;
      }

      p {
        margin-bottom: 0;
      }

      p.email, p.tel {
        font-weight: bold;
        .type {
          font-weight: normal;
        }
      }

      .map_canvas {
        margin-top: 1em;
      }
    }
  }

  .about_page {
    padding-top: 1.5em;
  }

  .article_section {
    article.ministerial_role {
      position: relative;
      min-height: 72px;

      h2.article_title {
        margin-left: 96px;
        margin-bottom: 0;
      }

      .current_appointee {
        @include type-13;
        margin-left: 96px;
        margin-bottom: 0;
      }

      .image_holder {
        margin-bottom: 0;
        width: 72px;
        height: 72px;
        position: absolute;
        top: 0;
        left: 0;
      }
    }
  }

  .social_media_account {
    margin-bottom: 0;

    img {
      width: 16px;
      height: 16px;
      margin-bottom: 0;
      padding-right: 0.5em;
    }
  }
}

